--- a/style.css
+++ b/style.css
@@ -485,6 +485,10 @@ nav {
 .dropdown-toggle::after {
     border: none !important;
 }
+.menu_wrapper {
+    border-top: 1px solid #707070;
+    border-bottom: 1px solid #707070;
+}
 
 /* ハンバーガーメニュー */
 .ham {
@@ -549,6 +553,7 @@ nav {
 .footer_menu {
     font-size: 0;
     width: 100%;
+    line-height: 1;
 }
 
 .global_menu > .menu-item,
@@ -565,7 +570,8 @@ nav {
     color: #000;
     font-weight: bold;
     text-align: center;
-    letter-spacing: 0.25em;
+    max-height: 50px;
+    letter-spacing: 0.2em;
     font-size: 18px;
     padding-top: 1em;
     padding-bottom: 1em;
@@ -633,10 +639,15 @@ nav {
 }
 .sns-menu-contents {
     display: block;
-    position: absolute;
+    position: fixed;
+    overflow-y: scroll;
     width: 100%;
+    height: 100%;
+    top: 0;
     margin-top: 50px;
+    padding-bottom: 100px;
     background-color: #fff;
+    -webkit-overflow-scrolling: touch;
 }
 .sns-menu-contents ul li {
     display: block;
