--- a/style.css
+++ b/style.css
@@ -502,11 +502,17 @@ nav {
 .sns-menu {
     position: absolute;
     top: .5rem;
+    left: 80%;
+    height: 40px;
+    cursor: pointer;
+}
+.tell-menu {
+    position: absolute;
+    top: .7rem;
     left: 70%;
     height: 40px;
     cursor: pointer;
 }
-
 .ham_line {
     position: absolute;
     left: 24%;
@@ -571,6 +577,7 @@ nav {
     font-weight: bold;
     text-align: center;
     max-height: 50px;
+    line-height: 1;
     letter-spacing: 0.2em;
     font-size: 18px;
     padding-top: 1em;
@@ -599,7 +606,7 @@ nav {
     color: #fff !important;
 }
 .sub-menu {
-    margin-top: 1em;
+    margin-top: .9em;
     display: none;
     position: absolute;
 }
