--- a/20210216_backup/responsive.css
+++ b/20210216_backup/responsive.css
@@ -94,11 +94,311 @@
 /*	5. Menu Navigation
 /* -------------------------------------------------------------------------------- */
 
-@media screen and (max-width: 575.98px) {}
+@media screen and (max-width: 575.98px) {
+    .logo-sm {
+        max-width: 200px;
+        padding-right: 0;
+    }
+    .navbar-brand {
+        width: 180px;
+    }
 
-@media screen and (min-width: 576px) and (max-width: 767.98px) {}
+    .nav-item {
+        border: none;
+    }
 
-@media screen and (min-width: 768px) and (max-width: 991.98px) {}
+    .dropdown-menu {
+        background-color: transparent !important;
+    }
+
+    .yamm-content {
+        text-align: center;
+    }
+    nav {
+        position: absolute;
+        width: 100%;
+        top: 5px;
+    }
+    .logo-img {
+        max-width: 250px;
+    }
+
+    .ham {
+        float: left;
+        margin-top: 0.2rem;
+    }
+
+    .global_nav {
+        display: none;
+        margin-top: 50px;
+        overflow-y: scroll;
+    }
+
+    .menu_wrapper {
+        height: 0;
+        margin-top: 10px;
+    }
+    
+    .global_menu {
+        background-color: #fff;
+    }
+    .global_menu .menu-item {
+        width: 100%;
+        transition: all 0.8s;
+    }
+    .clicked .global_menu .menu-item {
+        text-align: left;
+    }
+    .global_menu > .menu-item:first-of-type,
+    .footer_menu > .menu-item:first-of-type {
+        background-color: #58A4B0;        
+    }
+    .global_menu > .menu-item a,
+    .footer_menu > .menu-item a {
+        color: #000;
+    }
+    .menu-item-1188 a,.menu-item-51 a {
+        color: #fff !important;
+    }
+    .menu-item {
+        padding-bottom: 1em;
+        background-color: #fff;
+        border-bottom: 1px solid #F0F0F0;
+    }
+    .menu-item .sub-menu a {
+        color: #58A4B0 !important;
+    }
+    .menu-item-1188 .sub-menu,.menu-item-51 .sub-menu {
+        background-color: #ECF7F8;
+    }
+    .menu-item-1188 .sub-menu a,.menu-item-51 .sub-menu a {
+        color: #58A4B0 !important;
+    }
+    .menu-item-has-children > a::after {
+        font-family: "Font Awesome 5 Free";
+        content: '\f0dd';
+        font-size: 1.5em;
+        font-weight: bold;
+        position: absolute;
+        margin-top: -10px;
+        right: calc(100vw / 50 * 7);
+    }
+    
+    .menu-item-has-children:active > a::after,
+    .menu-item-has-children:hover > a::after {
+        content: '\f0d8';
+    }
+    .sub-menu {
+        margin-top: .7em;
+        position: relative;
+        max-height: 200px;
+    }
+    .sub-menu .menu-item {
+        text-align: center !important;
+        border: none;
+    }
+    .sub-menu::-webkit-scrollbar {
+        width: 10px;
+    }
+    .footer_menu {
+        display: none;
+    }
+    .logo-img {
+        width: 186px;
+    }
+    .f-header {
+        height: 55px;
+    }
+    .current-menu-item .sub-menu .menu-item,
+    .sub-menu .menu-item {
+        background-color: transparent;
+    }
+    .current-menu-item a:hover, .current_page_item a:hover {
+        color: #58A4B0 !important;
+    }
+    .menu-item-1188 a:hover,.menu-item-51 a:hover {
+        color: #fff !important;
+    }
+    .menu-item-1188 .sub-menu a:hover,.menu-item-51 .sub-menu a:hover {
+        color: #58A4B0 !important;
+    }
+    .menu-item a {
+        margin-left: 10%;
+    }
+    .sub-menu .menu-item a {
+        margin-left: 0;
+    }
+    .menu-item-1188 .sub-menu .menu-item,.menu-item-51 .sub-menu .menu-item {
+        background-color: transparent;
+    }
+    .line-it-button {
+        width: 100% !important;
+        height: 25px !important;
+    }
+    .sns-sm {
+        display: table;
+        padding: 0;
+    }
+    .menu_wrapper {
+        border: none;
+    }
+    .menu-item-51:hover + .menu-item-52,.menu-item-54:hover + .menu-item-55,
+    .menu-item-1188:hover + .menu-item-1191,.menu-item-1192:hover + .menu-item-1193 {
+        margin-top: 20px;
+    }
+}
+
+@media screen and (min-width: 576px) and (max-width: 767.98px) {
+    .logo-sm {
+        max-width: 300px;
+        z-index: 1001;
+    }
+    nav {
+        position: absolute;
+        width: 100%;
+        top: 15px;
+    }
+
+    .navbar-brand {
+        width: 230px;
+    }
+
+    .nav-item {
+        border: none;
+    }
+
+    .dropdown-menu {
+        background-color: transparent !important;
+    }
+
+    .yamm-content {
+        text-align: center;
+    }
+
+    .ham {
+        margin-top: 0.75rem;
+        float: left;
+    }
+
+    .global_nav {
+        display: none;
+        margin-top: 3.5em;
+    }
+
+    .menu_wrapper {
+        margin-top: 10px;
+        height: 0;
+    }
+    .global_menu .menu-item {
+        width: 100%;
+        transition: all 0.8s
+    }
+    
+    .global_menu > .menu-item:first-of-type,
+    .footer_menu > .menu-item:first-of-type {
+        background-color: rgba(255, 117, 10, 1);
+    }
+    
+    .menu-item {
+        text-align: left;
+        padding-left: 3em;
+        background-color: rgba(51, 51, 51, 1);
+    }
+    
+    .menu-item-has-children > a::after {
+        font-family: "Font Awesome 5 Free";
+        content: '\f055';
+        font-weight: bold;
+        position: absolute;
+        right: calc(100vw / 50 * 7);
+    }
+    
+    .menu-item-has-children:active > a::after,
+    .menu-item-has-children:hover > a::after {
+        content: '\f056';
+    }
+
+    .sub-menu {
+        position: relative;
+        max-height: 200px;
+        background: rgb(170, 170, 170);
+        overflow-y: scroll;
+    }
+    
+    .sub-menu::-webkit-scrollbar {
+        width: 10px;
+    }
+    
+    .sub-menu::-webkit-scrollbar-thumb {
+        background: rgba(255, 255, 255, 1);
+        border-radius: 3px;
+    }
+
+    .sub-menu .menu-item {
+        width: 100%;
+        background: rgb(170, 170, 170);
+        border-bottom: 1px solid rgb(255, 255, 255);
+    }
+
+    .footer_menu {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991.98px) {
+    .logo-img {
+        width: 250px;
+    }
+
+    .nav-link,
+    .dropdown-item {
+        font-size: 12px;
+    }
+
+    .menu_wrapper {
+        height: 1rem;
+    }
+    nav {
+        position: absolute;
+        width: 100%;
+        top: 10px;
+    }
+    .global_nav {
+        display: none;
+        margin-top: 2.5em;
+        max-height: 100vh;
+        overflow-y: scroll;
+    }
+    .global_menu .menu-item {
+        width: 100%;
+        transition: all 0.8s
+    }
+    
+    .global_menu > .menu-item:first-of-type,
+    .footer_menu > .menu-item:first-of-type {
+        background-color: rgba(255, 117, 10, 1);
+    }
+    
+    .menu-item {
+        background-color: rgba(51, 51, 51, 1);
+    }
+
+    .sub-menu {
+        position: relative;
+        background: rgb(170, 170, 170);
+        overflow-y: scroll;
+    }
+
+    .sub-menu .menu-item {
+        background: rgb(103, 103, 103);
+        width: 100%;
+        border-bottom: 1px solid rgb(255, 255, 255);
+    }
+
+    .footer_menu {
+        display: none;
+    }
+}
 
 @media screen and (min-width: 992px) and (max-width: 1199.98px) {}
 
