--- a/responsive.css
+++ b/responsive.css
@@ -98,11 +98,72 @@
 
 @media screen and (min-width: 576px) and (max-width: 767.98px) {}
 
-@media screen and (min-width: 768px) and (max-width: 991.98px) {}
+@media screen and (min-width: 768px) and (max-width: 991.98px) {
+    .nav-top {
+        display: block;
+        width: 100%;
+        max-height: 55px;
+        height: 55px;
+        padding-left: 18px;
+        padding-right: 18px;
+    }
+    .navbar-logo {
+        margin-top: 12px;
+    }
+    .logo-img {
+        width: 186px;
+    }
+    .nav-bottom {
+        position: fixed;
+        top:0;
+        width: 100%;
+        height: 100vh;
+        background-color: #fff;
+    }
+    .navbar-nav {
+        height: 100vh;
+        flex-direction: column;
+        padding-top: 55px;
+        border-top: none;
+        border-bottom: none;
+        background-color: #fff;
+    }
+    .nav-item {
+        position: relative;
+        width: 100%;
+        height: 70px;
+        text-align: left;
+        font-size: 20px;
+        font-weight: 600;
+    }
+    .nav-link {
+        display: block;
+        width: 100%;
+        height: 70px;
+        padding-top: 20px;
+        padding-left: 58px !important;
+        font-size: 20px;
+    }
+}
 
 @media screen and (min-width: 992px) and (max-width: 1199.98px) {}
 
-@media screen and (min-width:1200px) {}
+@media screen and (min-width:1200px) {
+    .item01 {
+        width: calc(20vw + 100px);
+    }
+    .item01 .dropdown-hover {
+        padding-left: 100px !important;
+        padding-right: 20px !important;
+    }
+    .item05 {
+        width: calc(20vw + 100px);
+        text-align: left;
+    }
+    .item05 a {
+        padding-left: 60px !important;
+    }
+}
 
 /* -------------------------------------------------------------------------------- */
 /*	6. Button
