--- a/style.css
+++ b/style.css
@@ -485,16 +485,6 @@ img {
     font-size: 20px;
     font-weight: 600;
 }
-.item01 {
-    width: calc(20vw + 100px);
-}
-.item05 {
-    width: calc(20vw + 100px);
-    text-align: left;
-}
-.item05 a {
-    padding-left: 60px !important;
-}
 .nav-link {
     height: 50px;
     padding-top: 10px;
@@ -503,8 +493,6 @@ img {
 /* ドロップダウン */
 .item01 .dropdown-hover {
     color: #fff;
-    padding-left: 100px !important;
-    padding-right: 20px !important;
     background-color: #58A4B0;
 }
 .item01 .dropdown-hover:hover {
@@ -518,7 +506,10 @@ img {
     transition: .3s;
 }
 .item01 .dropdown-list {
-    background-color: rgba(88, 164, 176, .4);
+    background-color: rgba(88, 164, 176, .3);
+}
+.item04 .dropdown-list {
+    background-color: rgba(255, 255, 255, .3);
 }
 .dropdown-link {
     text-align: center;
@@ -536,11 +527,70 @@ img {
 .item01 .dropdown-link a {
     color: #fff;
 }
+.item04 .dropdown-link a {
+    color: #909090;
+}
+.item04 .dropdown-link a:hover {
+    color: #58A4B0;
+}
 .dropdown-hover:hover + .dropdown-list,
 .dropdown-list:hover {
     visibility: visible;
     opacity: 1;
     transition: .3s;
+}
+
+/* ハンバーガーメニュー */
+.hide {
+    display: none;
+}
+.p-fixed {
+    position: fixed !important;
+}
+.ham-trigger {
+    position: absolute;
+    width: 24px;
+    height: 20px;
+    top: 20px;
+    right: 0;
+    margin-right: 20px;
+    cursor: pointer;
+    z-index: 999;
+}
+.ham-trigger span {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #000;
+    border-radius: 4px;
+}
+.ham-trigger, .ham-trigger span {
+    display: inline-block;
+    transition: all .5s;
+    box-sizing: border-box;
+}
+.ham-trigger span:nth-of-type(1) {
+    top: 0;
+}
+.ham-trigger span:nth-of-type(2) {
+    top: 9px;
+}
+.ham-trigger span:nth-of-type(3) {
+    bottom: 0;
+}
+
+/*クリック後の処理*/
+#ham.active span:nth-of-type(1) {
+    -webkit-transform: translateY(7px) rotate(-45deg);
+    transform: translateY(7px) rotate(-45deg);
+}
+#ham.active span:nth-of-type(2) {
+    opacity: 0;
+}
+#ham.active span:nth-of-type(3) {
+    -webkit-transform: translateY(-11px) rotate(45deg);
+    transform: translateY(-11px) rotate(45deg);
 }
 
 /* nav余白 */
