--- a/responsive.css
+++ b/responsive.css
@@ -94,9 +94,141 @@
 /*	5. Menu Navigation
 /* -------------------------------------------------------------------------------- */
 
-@media screen and (max-width: 575.98px) {}
+@media screen and (max-width: 575.98px) {
+    .nav-top {
+        display: block;
+        width: 100%;
+        max-height: 55px;
+        height: 55px;
+        padding-left: 18px;
+        padding-right: 18px;
+    }
+    .navbar-logo {
+        margin-top: 12px;
+    }
+    .logo-img {
+        width: 186px;
+    }
+    .nav-bottom {
+        position: fixed;
+        top:0;
+        width: 100%;
+        height: 100vh;
+        background-color: #fff;
+    }
+    .navbar-nav {
+        height: 100vh;
+        flex-direction: column;
+        padding-top: 55px;
+        border-top: none;
+        border-bottom: none;
+        background-color: #fff;
+    }
+    .nav-item {
+        display: block;
+        position: static;
+        width: 100%;
+        height: 70px;
+        text-align: left;
+        font-size: 20px;
+        font-weight: 600;
+    }
+    .nav-link {
+        display: block;
+        width: 100%;
+        height: 70px;
+        padding-top: 20px;
+        padding-left: 58px !important;
+        font-size: 20px;
+    }
+    .dropdown-list {
+        display: block;
+        position: static;
+        background-color: #ECF7F8 !important;
+    }
+    .dropdown-list a {
+        color: #58A4B0 !important;
+    }
+    .item01 .dropdown-link {
+        padding:12px 0 15px 75px;
+        text-align: left;
+    }
+    .item01 > a:after {
+        font-family: "Font Awesome 5 Free";
+        content: '\f0dd';
+        font-size: 1.5em;
+        font-weight: bold;
+        position: absolute;
+        margin-top: -14px;
+        right: calc(100vw / 50 * 7);
+    }
+    .item01:active > a:after,
+    .item01:hover > a:after {
+        margin-top: -10px;
+        content: '\f0d8';
+    }
+}
 
-@media screen and (min-width: 576px) and (max-width: 767.98px) {}
+@media screen and (min-width: 576px) and (max-width: 767.98px) {
+    .nav-top {
+        display: block;
+        width: 100%;
+        max-height: 55px;
+        height: 55px;
+        padding-left: 18px;
+        padding-right: 18px;
+    }
+    .navbar-logo {
+        margin-top: 12px;
+    }
+    .logo-img {
+        width: 186px;
+    }
+    .nav-bottom {
+        position: fixed;
+        top:0;
+        width: 100%;
+        height: 100vh;
+        background-color: #fff;
+    }
+    .navbar-nav {
+        height: 100vh;
+        flex-direction: column;
+        padding-top: 55px;
+        border-top: none;
+        border-bottom: none;
+        background-color: #fff;
+    }
+    .nav-item {
+        display: block;
+        position: static;
+        width: 100%;
+        height: 70px;
+        text-align: left;
+        font-size: 20px;
+        font-weight: 600;
+    }
+    .nav-link {
+        display: block;
+        width: 100%;
+        height: 70px;
+        padding-top: 20px;
+        padding-left: 58px !important;
+        font-size: 20px;
+    }
+    .dropdown-list {
+        position: static;
+        display: block;
+        background-color: #ECF7F8 !important;
+    }
+    .dropdown-list a {
+        color: #58A4B0 !important;
+    }
+    .item01 .dropdown-link {
+        padding:12px 0 15px 75px;
+        text-align: left;
+    }
+}
 
 @media screen and (min-width: 768px) and (max-width: 991.98px) {
     .nav-top {
@@ -129,7 +261,8 @@
         background-color: #fff;
     }
     .nav-item {
-        position: relative;
+        display: block;
+        position: static;
         width: 100%;
         height: 70px;
         text-align: left;
@@ -143,6 +276,18 @@
         padding-top: 20px;
         padding-left: 58px !important;
         font-size: 20px;
+    }
+    .dropdown-list {
+        position: static;
+        display: block;
+        background-color: #ECF7F8 !important;
+    }
+    .dropdown-list a {
+        color: #58A4B0 !important;
+    }
+    .item01 .dropdown-link {
+        padding:12px 0 15px 75px;
+        text-align: left;
     }
 }
 
