スマホサイズでの家づくりのステップ画像の位置調整

--- a/responsive.css
+++ b/responsive.css
@@ -639,6 +639,10 @@
 		font-size: 12px;
 	}
 
+	.sidebar-option img {
+		position: static;
+	}
+
 	.sidebar-option {
 		border-left: none;
 		text-align: center;
